--- a/deploy/ansible/provision.yml
+++ b/deploy/ansible/provision.yml
@@ -3,10 +3,10 @@
 # Ubuntu 12.04 required due to a bug with fastcgi in 14.04
 -
   hosts: appserver
-  remote_user: ubuntu
   sudo: yes
   roles:
     - ami
+    - configure
     - nginx
     - services
     - startup
