--- a/deploy/ansible/roles/production/tasks/main.yml
+++ b/deploy/ansible/roles/production/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
 # configure for production
 
-- name: Make sure the base directory exsists
-  file: path={{app_base_path}} state=directory
+- name: ensure pre-existing repo is removed
+  file: path={{app_base_path}} state=absent
 
-- name: Make sure node_modules are on the box
-  synchronize: src=../../node_modules dest={{app_base_path}}
+- name: clone git repo
+  git: dest={{app_base_path}} repo={{git_repo}}
 
-- name: Make sure a project config directory exists
+- name: npm install
+  npm: path={{app_base_path}}
+
+- name: make sure a project config directory exists
   file: path={{app_base_path}}/config state=directory
